--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ismaelsolutionsdigital - Médecins Maroc</title>
+  <title>DIGIMED - Médecins Maroc</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f7f9fb; margin: 0; padding: 0; color: #333; }
     header { background: #0077B6; color: white; text-align: center; padding: 2rem 1rem; }
